# jobcrawler

./: .gitignore  Dockerfile  README.md  app.py  config.py  gunicorn.conf.py  old.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test-and-deploy.yml  test.yml
jobcrawler/: __init__.py  app.py  exceptions.py  pyproject.toml
jobcrawler/app/: app.py
jobcrawler/app/migrations/versions/: 0ed26108783a_.py  a0658319f516_.py
jobcrawler/core/: models.py  tasks.py
jobcrawler/email/: email.py
jobcrawler/exceptions/: exceptions.py
jobcrawler/extensions/: admin.py  login_manager.py  scheduler.py  sitemap.py
jobcrawler/jobs/: __init__.py  dead_links.py  email.py  scheduler.py  scraping.py  tasks.py
jobcrawler/models/: companies.py  postings.py  searches.py  users.py
jobcrawler/routes/: __init__.py  auth.py  companies.py  errors.py  preferences.py  scraping.py  searches.py
jobcrawler/scraping/: dead_links.py  postings.py  scraping.py
jobcrawler/static/css/: styles.css
jobcrawler/static/js/: index.js
jobcrawler/templates/: 404.html  base.html  companies.html  error.html  index.html  login.html  preferences.html  searches.html  signup.html
migrations/versions/: 02df91d655e9_add_is_admin_to_users.py  0b58115f817b_adds_last_received_email_at.py  1c71d812de2b_expand_company_url_column_length.py  28b1ddaa007b_initial_setup.py  42e716c0ca90_initial_migration.py  504bffd294d8_add_dead_link_flag.py  5e3c5f0e7bad_expand_link_columns.py  (+12 more)
scripts/: run.sh  test.sh
src/: __init__.py  jobs.py  models.py  routes.py
tests/: conftest.py
(+24 files in other folders)
