[tool.poetry]
name = "jobcrawler"
version = "0.1.0"
description = ""
authors = ["mrkaye97 <mrkaye97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
greenlet = "2.0.0"
flask-sqlalchemy = "^3.0.3"
psycopg2-binary = "^2.9.6"
flask-migrate = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
