[tool.poetry]
name = "jobcrawler"
version = "0.1.0"
description = ""
authors = ["mrkaye97 <mrkaye97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
greenlet = "2.0.0"
flask-sqlalchemy = "^3.0.3"
psycopg2-binary = "^2.9.6"
flask-migrate = "^4.0.4"
apscheduler = "^3.10.1"
bs4 = "^0.0.1"
requests = "^2.28.2"
flask-apscheduler = "^1.12.4"
sib-api-v3-sdk = "^7.6.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
